# ankiutils

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Justfile  Makefile  README.md  dprint.json  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  install_deps.sh
.vscode.dist/: extensions.json  settings.json
requirements/: base.in  base.txt  dev.in  dev.txt
src/ankiutils/: _gofile_api_key.py  _internal.py  config.py  consts.py  errors.py  gofile.py  log.py  sveltekit.py  updates.py
src/ankiutils/gui/: dialog.py  errors.py  operations.py  sveltekit_web.py  utils.py
