[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ankiutils"
authors = [{ name = "Abdo", email = "abdo@abdnh.net" }]
description = "A collection of utilties for Anki add-on development"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = ["version"]
dependencies = ["sentry-sdk"]
[dependency-groups]
dev = [
    "aqt",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-requests",
]

[tool.setuptools_scm]

[project.urls]
Repository = "https://github.com/abdnh/ankiutils"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "TRY"]
ignore = ["PLW0603", "PLR2004"]

[tool.ruff.lint.pylint]
max-args = 7
