[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ankiutils"
authors = [{ name = "Abdo", email = "abdo@abdnh.net" }]
description = "A collection of utilties for Anki add-on development"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
license = "AGPL-3.0-or-later"
dynamic = ["version"]
dependencies = [
    "sentry-sdk",
    "structlog>=25.4.0",
    "typing-extensions>=4.14.0",
]
[dependency-groups]
dev = [
    "aqt",
    "mypy",
    "prek>=0.3.0",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-requests",
    "types-waitress",
]

[tool.setuptools_scm]

[project.urls]
Repository = "https://github.com/abdnh/ankiutils"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PL", "TRY"]
ignore = ["PLW0603", "PLR2004"]

[tool.ruff.lint.pylint]
max-args = 9
